$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Remove '+' icon from month.php, week.php, day.php.
   Users can now double-click on a date to add a new event.
 - Added CDATA block around JS in view_r.php
 - Applied PATCH [ 1203702 ] Sys-Admin Guide fails to mention LDAP support in PHP
 - Updated list of supported languages in SysAdmin.html
 - Per PATCH [ 1622050 ] fixed somy messages
   I've started to combine some phrases together for easier translation.
   Including moving the punctuation from the code and into the phrase.
 - Update the URL to the WebCalendar wiki
 - Fixed bug [ 1748124 ] reminder email has wrong date
 - Fixed bug [ 1766614 ] 'weekstart' at edit_entry is wrong

Version 1.1.3 (4 Aug 2007)
 - Fixed bug: when upgrading from 1.0.5 to 1.1.X, a bad cookie session can
   cause PHP to crash on some systems.
 - If settings.php is size 0, then redirect to install page (because install
   was started but not completed).
 - Fixed bug [ 1744648 ] Theme changing over system settings
 - Fixed bug: error in SQLite creation SQL
 - Fixed bug [ 1738333 ] Events without reminder
 - Fixed bug [ 1737128 ] From notification to "not authorized"
 - Fixed bug [ 1766291 ] mini-calender pop-up will not be displayed correctly
 - Fixed bug [ 1754622 ] every 'normal' entry will be displayed as 'Priority: 2-High'
 - Fixed bug [ 1765906 ] layered-entries don't show detailed pop-up infos via hover
 - Fixed bug [ 1765924 ] improvements requested at view_entry.php refering 'Notes'
 - Fixed bug [ 1765928 ] cannot add attachments to an entry
 - Fixed bug [ 1765881 ] long day names not proper adjusted in week.php for English
 - Fixed bug [ 1765970 ] enabled option "Display tasks in Calendars" will not work at
 - Fixed bug [ 1765977 ] cannot edit any entries of users.php
 - Fixed bug [ 1700505 ] repeating multiday events
 - Fixed bug [ 1664815 ] Import Sum/Desc trunc if colon in text